--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,9 @@ Package: UWBiost561
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
+    person("Anke", "Li", , "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
@@ -14,5 +13,8 @@ Suggests:
     rmarkdown,
     bookdown,
     tidyverse,
+    testthat,
     ggplot2
 VignetteBuilder: knitr
+Imports: 
+    utils
